womtool/src/test/resources/validate/wdl/wdl_draft2/invalid/missing_subworkflow_input/missing_subworkflow_input.wdl
import "subworkflow.wdl" as sub

workflow missing_subworkflow_input {
  call sub.subwf
}
